--- a/newton_fractal.html
+++ b/newton_fractal.html
@@ -42,7 +42,7 @@
     <script type="text/javascript" src="glutils.js"></script>
     <script type="text/javascript">
         var canvas = document.getElementById("canvas");
-        var gl = canvas.getContext("experimental-webgl");
+        var gl = canvas.getContext("webgl");
 
         // Scale from coord to complex number to avoid float overflow when there are too many points.
         const kComplexToCoord = Math.min(canvas.width, canvas.height);
@@ -202,7 +202,7 @@
             const uniformArgs = generateUniformArgs(kNumRoots);
             
             const fragment_shader = `
-            precision mediump float;
+            precision highp float;
 
             const int kSteps = ${kNumSteps};
             const int kNumRoots = ${kNumRoots};
@@ -237,7 +237,7 @@
                     distances[i] = length(x - roots[i]);
                 }
 
-                float min_distance = 1.0 / 0.0;
+                float min_distance = 3.402823466e+38;
                 for (int i = 0; i < kNumRoots; ++i) {
                     min_distance = min(min_distance, distances[i]);
                 }
