--- a/newton_fractal.html
+++ b/newton_fractal.html
@@ -36,16 +36,17 @@
         <h3>Notes</h3>
         <ul>
             <li>You can drag the points with your mouse or finger.</li>
+            <li>You can zoom in or out with your scroll wheel.</li>
         </ul>
     </div>
     
     <script type="text/javascript" src="glutils.js"></script>
     <script type="text/javascript">
-        var canvas = document.getElementById("canvas");
+        const canvas = document.getElementById("canvas");
         const canvas_width = Math.min(window.innerWidth, window.innerHeight);
         canvas.width = canvas_width;
         canvas.height = canvas_width;
-        var guipanel = document.getElementById("guipanel");
+        const guipanel = document.getElementById("guipanel");
         if (window.innerWidth > window.innerHeight) {
             guipanel.style.left = 20 + window.innerHeight + "px";
             guipanel.style.top = "0px";
@@ -54,13 +55,13 @@
             guipanel.style.left = "20px";
         }
 
-        var gl = canvas.getContext("webgl");
+        const gl = canvas.getContext("webgl");
         // Scale from coord to complex number to avoid float overflow when there are too many points.
-        const kComplexToCoord = Math.min(canvas.width, canvas.height);
-        const kCoordToComplex = 1.0 / kComplexToCoord;
+        var complexToCoord = Math.min(canvas.width, canvas.height);
+        var coordToComplex = 1.0 / complexToCoord;
 
-        var colorsContainer = document.getElementById("colors");
-        var points =  {
+        const colorsContainer = document.getElementById("colors");
+        const points =  {
             positions : [],
 
             length() {
@@ -71,26 +72,48 @@
                 let closest_index = 0;
                 let min_distance = Infinity;
                 for (let i = 0; i < this.length(); ++i) {
-                    let dx = position[0] - this.positions[i][0];
-                    let dy = position[1] - this.positions[i][1];
+                    const dx = position[0] - this.positions[i][0];
+                    const dy = position[1] - this.positions[i][1];
                     const this_distance_square = dx * dx + dy * dy;
                     if (this_distance_square < min_distance) {
                         closest_index = i;
                         min_distance = this_distance_square;
                     }
                 }
-                return closest_index
+                return [closest_index, Math.sqrt(min_distance)];
             },
 
             setPosition(index, position) {
                 this.positions[index] = position;
             },
 
+            scaleBy(position, scale) {
+                for (let i = 0; i < this.length(); ++i) {
+                    this.positions[i] = add(mul(sub(this.positions[i], position), scale), position);
+                }
+            },
+
+            translateBy(translate) {
+                for (let i = 0; i < this.length(); ++i) {
+                    this.positions[i] = add(this.positions[i], translate);
+                }
+            },
+
             positionsArray() {
+                let maxCoord = [-Infinity, -Infinity];
+                let minCoord = [Infinity, Infinity];
+                for (let i = 0; i < this.length(); ++i) {
+                    maxCoord = max(maxCoord, this.positions[i]);
+                    minCoord = min(minCoord, this.positions[i]);
+                }
+                const diffCoord = sub(maxCoord, minCoord);
+                complexToCoord = Math.max(diffCoord[0], diffCoord[1]);
+                coordToComplex = 1.0 / complexToCoord;
+
                 let res = new Float32Array(this.length() * 2);
                 for (let i = 0; i < this.length(); ++i) {
-                    res[i * 2 + 0] = this.positions[i][0] * kCoordToComplex;
-                    res[i * 2 + 1] = this.positions[i][1] * kCoordToComplex;
+                    res[i * 2 + 0] = this.positions[i][0] * coordToComplex;
+                    res[i * 2 + 1] = (canvas.height - 1 - this.positions[i][1]) * coordToComplex;
                 }
                 return res;
             },
@@ -98,7 +121,7 @@
             colorsArray() {
                 let res = new Float32Array(this.length() * 3);
                 for (let i = 0; i < this.length(); ++i) {
-                    let color_str = document.getElementById(`colors${i}`).value;
+                    const color_str = document.getElementById(`colors${i}`).value;
                     res[i * 3 + 0] = parseInt(color_str.substring(1, 3), 16) / 255.0;
                     res[i * 3 + 1] = parseInt(color_str.substring(3, 5), 16) / 255.0;
                     res[i * 3 + 2] = parseInt(color_str.substring(5, 7), 16) / 255.0;
@@ -219,6 +242,8 @@
             const int kNumRoots = ${kNumRoots};
             uniform vec2 roots[kNumRoots];
             uniform vec3 colors[kNumRoots];
+            uniform float coordToComplex;
+            uniform float complexToCoord;
 
             vec2 Mul(vec2 a, vec2 b) {
                 return vec2(a.x * b.x - a.y * b.y, a.x * b.y + a.y * b.x);
@@ -238,7 +263,7 @@
             vec4 Sample(vec2 coord) {
                 vec4 res = vec4(0);
 
-                vec2 x = coord * ${kCoordToComplex};
+                vec2 x = coord * coordToComplex;
                 for (int i = 0; i < kSteps; ++i) {
                     x += Step(x);
                 }
@@ -261,7 +286,7 @@
                 }
 
                 for (int i = 0; i < kNumRoots; ++i) {
-                    float pixel_distance = length(coord - roots[i] * float(${kComplexToCoord}));
+                    float pixel_distance = length(coord - roots[i] * complexToCoord);
                     if (pixel_distance >= 3.5 && pixel_distance <= 6.5) {
                         res = vec4(fract(colors[i] + vec3(0.5, 0.5, 0.5)), 1.0);
                     }
@@ -310,17 +335,17 @@
             uniforms = {
                 roots : gl.getUniformLocation(program,'roots'),
                 colors : gl.getUniformLocation(program, 'colors'),
+                coordToComplex : gl.getUniformLocation(program, 'coordToComplex'),
+                complexToCoord : gl.getUniformLocation(program, 'complexToCoord'),
             };
         }
 
         function draw() {
             gl.uniform2fv(uniforms.roots, points.positionsArray());
             gl.uniform3fv(uniforms.colors, points.colorsArray());
+            gl.uniform1f(uniforms.coordToComplex, coordToComplex);
+            gl.uniform1f(uniforms.complexToCoord, complexToCoord);
             gl.drawArrays(gl.TRIANGLE_FAN, 0, 4);
-        }
-        
-        function getPosition(lefttopx, lefttopy) {
-            return [lefttopx, canvas.height - 1 - lefttopy];
         }
 
         var index = -1;
@@ -332,27 +357,42 @@
         }
 
         function dragstart(lefttopX, lefttopY) {
-            const click_position = getPosition(lefttopX, lefttopY);
-            index = points.closestIndex(click_position);
+            let [closestIndex, minDistance] = points.closestIndex([lefttopX, lefttopY]);
+            if (minDistance < 50) {
+                index = closestIndex;
+            }
         }
         function dragmove(lefttopX, lefttopY) {
             if (index != -1) {
-                const click_position = getPosition(lefttopX, lefttopY);
-                points.setPosition(index, click_position);
+                points.setPosition(index, [lefttopX, lefttopY]);
                 draw();
             }
         }
         function dragend() {
             index = -1;
         }
+        var mousedown = false;
         canvas.addEventListener("mousedown",  e => {
+            mousedown = true;
             dragstart(e.offsetX, e.offsetY);
         });
         canvas.addEventListener("mousemove",  e => {
-            dragmove(e.offsetX, e.offsetY);
+            if (index != -1) {
+                dragmove(e.offsetX, e.offsetY);
+            } else if (mousedown) {
+                points.translateBy([e.movementX, e.movementY]);
+                draw();
+            }
         });
         canvas.addEventListener("mouseup",  e => {
+            mousedown = false;
             dragend();
+        });
+        canvas.addEventListener("wheel", e => {
+            e.preventDefault();
+            const scale = 1 - e.deltaY / 1250;
+            points.scaleBy([e.offsetX, e.offsetY], scale);
+            draw();
         });
         canvas.addEventListener("touchstart", e => {
             dragstart(e.touches[0].pageX, e.touches[0].pageY);
@@ -374,7 +414,7 @@
             dragend();
         });
 
-        var buffer = gl.createBuffer();
+        const buffer = gl.createBuffer();
         gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
         gl.enableVertexAttribArray(0);
         gl.vertexAttribPointer(0, 2, gl.FLOAT, false, 8, 0);
