--- a/cellular_automata_1d.html
+++ b/cellular_automata_1d.html
@@ -13,7 +13,7 @@
         </tr>
         <tr>
             <td>Scale</td>
-            <td><input id="scale-input" type="range" min="0.01" max="1.0" step=0.01 value="1.0" onchange="draw()"/></td>
+            <td><input id="scale-input" type="range" min="0.01" max="1.0" step=0.01 value="1.0" onchange="draw()" oninput="draw()"/></td>
         </tr>
         <tr>
             <td>Rule</td>
