--- a/newton_fractal.html
+++ b/newton_fractal.html
@@ -11,7 +11,7 @@
         <table id="params" style="border-collapse: separate;border-spacing: 0 20px;">
             <tr>
                 <td>Iteration Steps</td>
-                <td><input id="steps-input" value="20" onchange="compile();draw()"/></td>
+                <td><input id="steps-input" value="30" onchange="compile();draw()"/></td>
             </tr>
             <tr>
                 <td>Supersampling</td>
@@ -23,6 +23,31 @@
                         <option value="8"> x8</option>
                     </select>
                 </td>
+            </tr>
+            <tr>
+                <td>Appearance</td>
+                <td>
+                    <select id="appearance" onchange="compile();draw()">
+                        <option value="1" selected="selected">1</option>
+                        <option value="2">2</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Brightness</td>
+                <td><input id="brightness" type="range" min="0.0" max="3.0" step=0.01 value="1.5" oninput="draw()" onchange="draw()"/></td>
+            </tr>
+            <tr>
+                <td>Contrast</td>
+                <td><input id="contrast" type="range" min="0.0" max="1.0" step=0.01 value="0.5" oninput="draw()" onchange="draw()"/></td>
+            </tr>
+            <tr>
+                <td>HDR</td>
+                <td><input id="hdr" type="checkbox" checked onchange="compile();draw()"/></td>
+            </tr>
+            <tr>
+                <td>Show Points</td>
+                <td><input id="showpoints" type="checkbox" checked onchange="draw()"/></td>
             </tr>
             <tr>
                 <td>Points</td>
@@ -244,6 +269,9 @@
             uniform vec3 colors[kNumRoots];
             uniform float coordToComplex;
             uniform float complexToCoord;
+            uniform float brightness;
+            uniform float contrast;
+            uniform int showpoints;
 
             vec2 Mul(vec2 a, vec2 b) {
                 return vec2(a.x * b.x - a.y * b.y, a.x * b.y + a.y * b.x);
@@ -278,17 +306,45 @@
                     min_distance = min(min_distance, distances[i]);
                 }
 
+                vec2 closest_root;
+                vec3 closest_color;
                 for (int i = 0; i < kNumRoots; ++i) {
                     if (distances[i] == min_distance) {
-                        res = vec4(colors[i], 1.0);
+                        closest_root = roots[i];
+                        closest_color = colors[i];
                         break;
                     }
                 }
-
-                for (int i = 0; i < kNumRoots; ++i) {
-                    float pixel_distance = length(coord - roots[i] * complexToCoord);
-                    if (pixel_distance >= 3.5 && pixel_distance <= 6.5) {
-                        res = vec4(fract(colors[i] + vec3(0.5, 0.5, 0.5)), 1.0);
+                x = coord * coordToComplex;
+                float initial_distance = length(x - closest_root);
+                float sum_distances = initial_distance;
+                float max_distance = 0.0;
+                for (int i = 0; i < kSteps; ++i) {
+                    x += Step(x);
+                    float this_distance = length(x - closest_root);
+                    sum_distances += length(x - closest_root);
+                    max_distance = max(max_distance, this_distance);
+                }
+                float used_distance;
+            #define APPEARANCE ${document.getElementById("appearance").value}
+            #if APPEARANCE == 1
+                used_distance = initial_distance;
+            #else
+                used_distance = max_distance;
+            #endif
+                float ratio = sum_distances / (used_distance * float(kSteps + 1));
+            ${document.getElementById("hdr").checked ? "#define HDR" : ""}
+            #ifdef HDR
+                res = vec4(vec3(1.0) - exp(-closest_color * pow(ratio, contrast) * brightness * 1.5), 1.0);
+            #else
+                res = vec4(closest_color * pow(ratio, contrast) * brightness, 1.0);
+            #endif
+                if (showpoints != 0) {
+                    for (int i = 0; i < kNumRoots; ++i) {
+                        float pixel_distance = length(coord - roots[i] * complexToCoord);
+                        if (pixel_distance >= 3.5 && pixel_distance <= 6.5) {
+                            res = vec4(fract(colors[i] + vec3(0.5, 0.5, 0.5)), 1.0);
+                        }
                     }
                 }
 
@@ -337,6 +393,9 @@
                 colors : gl.getUniformLocation(program, 'colors'),
                 coordToComplex : gl.getUniformLocation(program, 'coordToComplex'),
                 complexToCoord : gl.getUniformLocation(program, 'complexToCoord'),
+                brightness : gl.getUniformLocation(program, 'brightness'),
+                contrast : gl.getUniformLocation(program, 'contrast'),
+                showpoints : gl.getUniformLocation(program, 'showpoints'),
             };
         }
 
@@ -345,6 +404,9 @@
             gl.uniform3fv(uniforms.colors, points.colorsArray());
             gl.uniform1f(uniforms.coordToComplex, coordToComplex);
             gl.uniform1f(uniforms.complexToCoord, complexToCoord);
+            gl.uniform1f(uniforms.brightness, parseFloat(document.getElementById('brightness').value));
+            gl.uniform1f(uniforms.contrast, parseFloat(document.getElementById('contrast').value));
+            gl.uniform1i(uniforms.showpoints, document.getElementById('showpoints').checked ? 1 : 0);
             gl.drawArrays(gl.TRIANGLE_FAN, 0, 4);
         }
 
