--- a/newton_fractal.html
+++ b/newton_fractal.html
@@ -367,7 +367,8 @@
                     for (int i = 0; i < kNumRoots; ++i) {
                         float pixel_distance = length(coord - roots[i] * complexToCoord);
                         if (pixel_distance >= 3.5 && pixel_distance <= 6.5) {
-                            res = vec4(fract(colors[i] + vec3(0.5, 0.5, 0.5)), 1.0);
+                            res.rgb = fract(res.rgb + vec3(0.5, 0.5, 0.5));
+                            break;
                         }
                     }
                 }
