--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <ul>
         <li><a href="pwm_stripe.html">PWM Stripe Simulator</a></li>
+        <li><a href="Mandelbrot_set.html">Mandelbrot Set</a></li>
         <li><a href="newton_fractal.html">Newton Fractal</a></li>
         <li><a href="gpuflops.html">GPU FLOPS Test</a></li>
         <li><a href="cellular_automata_1d.html">Cellular Automata 1D</a></li>
