--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <style>
+        ul {
+            font-size: 3vh;
+        }
+    </style>
 </head>
 <body>
     <ul>
