--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="pwm_stripe.html">PWM Stripe Simulator</a></li>
         <li><a href="Mandelbrot_set.html">Mandelbrot Set</a></li>
         <li><a href="newton_fractal.html">Newton Fractal</a></li>
+        <li><a href="paraboloid_projection.html">Paraboloid Projection</a></li>
         <li><a href="gpuflops.html">GPU FLOPS Test</a></li>
         <li><a href="cellular_automata_1d.html">Cellular Automata 1D</a></li>
         <li><a href="userAgent.html">userAgent</a></li>
